--- a/css/styles.scss
+++ b/css/styles.scss
@@ -154,13 +154,19 @@ footer {
   p {
     margin-left: 20px;
     margin-bottom: 10px;
-    color: #fff;
+    color: #0e294a;
     font-family: Montserrat;
     font-size: 18px;
     font-weight: 500;
+
+    &.tac {
+      margin-left: 0;
+      text-align: center;
+    }
   }
 
-  input {
+  input,
+  textarea {
     width: 454px;
     height: 51px;
     line-height: 51px;
@@ -172,6 +178,178 @@ footer {
     border-radius: 26px;
     background-color: #fff;
     border: 1px solid #f26522;
+  }
+
+  textarea {
+    width: 100%;
+    min-height: 102px;
+    resize: vertical;
+    line-height: 32px;
+  }
+}
+
+.one_cart_item {
+  display: flex;
+  padding: 30px;
+  align-items: stretch;
+
+  @media all and (max-width: 1400px) {
+    padding: 20px;
+  }
+
+  @media all and (max-width: 767px) {
+    padding: 30px 0;
+  }
+
+  .img_wrap {
+    width: 250px;
+    height: 160px;
+    flex: none;
+
+    @media all and (max-width: 767px) {
+      width: 110px;
+      height: 90px;
+    }
+  }
+
+  .product_inner {
+    flex: 1 1 auto;
+    padding: 0 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    @media all and (max-width: 767px) {
+      padding: 0 15px;
+    }
+  }
+
+  .product_name {
+    color: #fff;
+    font-family: "Lapsus Pro";
+    font-size: 38px;
+    font-weight: 700;
+
+    @media all and (max-width: 767px) {
+      font-size: 20px;
+    }
+  }
+
+  .price_remove_wrap {
+    flex: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+
+    .remove {
+      margin-top: 4px;
+      border-radius: 50%;
+      width: 33px;
+      height: 33px;
+      background-color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      opacity: 0.4;
+      border: 1px solid #9fa9b7;
+      transition: opacity 180ms ease-in-out, border 180ms ease-in-out;
+
+      @media all and (max-width: 767px) {
+        width: 20px;
+        height: 20px;
+      }
+
+      svg {
+        width: 17px;
+        height: 19px;
+
+        @media all and (max-width: 767px) {
+          width: 12px;
+          height: 13px;
+        }
+
+        path {
+          fill: none;
+          stroke: #0e294a;
+          stroke-width: 1.5;
+          stroke-linecap: round;
+          stroke-linejoin: round;
+          stroke-miterlimit: 20;
+          transition: stroke 180ms ease-in-out;
+        }
+      }
+
+      &:hover {
+        @media all and (min-width: 767px) {
+          opacity: 1;
+          border: 1px solid #f26522;
+          transition: opacity 180ms ease-in-out, border 180ms ease-in-out;
+
+          svg {
+            path {
+              stroke: #f26522;
+              transition: stroke 180ms ease-in-out;
+            }
+          }
+        }
+      }
+    }
+
+    .price {
+      color: #f26522;
+      font-family: "Lapsus Pro";
+      font-size: 37px;
+      font-weight: 700;
+
+      @media all and (max-width: 767px) {
+        font-size: 32px;
+      }
+
+      &::after {
+        content: " ₴";
+      }
+    }
+  }
+
+  & + .one_cart_item {
+    border-top: 1px solid #f26522;
+    padding-top: 50px;
+  }
+}
+
+.default_btn {
+  text-align: center;
+  overflow: hidden;
+  background-color: #0e294a;
+  height: 50px;
+  width: 396px;
+  padding: 0 20px;
+  font-family: "Lapsus Pro";
+  color: #fff;
+  font-size: 20px;
+  border-radius: 5px;
+
+  &:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    background-color: #f26522;
+    transition: width 360ms ease-in-out;
+  }
+
+  &:hover {
+    &:after {
+      width: 100%;
+      transition: width 360ms ease-in-out;
+    }
+  }
+
+  span {
+    z-index: 2;
   }
 }
 
@@ -356,6 +534,81 @@ section {
     width: 26px;
     height: 26px;
     background: url("../img/cart_icon_hover.svg") no-repeat center / contain;
+  }
+}
+
+.quantity_wrap {
+  display: flex;
+  align-items: center;
+  grid-gap: 35px;
+  font-weight: 700;
+  font-family: "Lapsus Pro";
+
+  @media all and (max-width: 767px) {
+    grid-gap: 20px;
+  }
+
+  .quantity {
+    color: #f26522;
+    font-size: 31px;
+
+    @media all and (max-width: 767px) {
+      font-size: 20px;
+    }
+  }
+
+  button {
+    width: 50px;
+    height: 50px;
+    box-shadow: 0 3px 10px rgba(14, 41, 74, 0.2);
+    background-color: #fff;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #f26522;
+    font-size: 46px;
+    opacity: 1;
+    transition: opacity 180ms ease-in-out;
+
+    @media all and (max-width: 767px) {
+      font-size: 20px;
+      width: 20px;
+      height: 20px;
+    }
+
+    &.disabled {
+      opacity: 0.3;
+      transition: opacity 180ms ease-in-out;
+      pointer-events: none;
+    }
+
+    &:hover {
+      @media all and (min-width: 767px) {
+        opacity: 0.7;
+        transition: opacity 180ms ease-in-out;
+      }
+    }
+
+    span {
+      display: block;
+      height: 50px;
+      cursor: pointer;
+
+      @media all and (max-width: 767px) {
+        height: 23px;
+      }
+    }
+
+    &.minus {
+      span {
+        height: 60px;
+
+        @media all and (max-width: 767px) {
+          height: 27px;
+        }
+      }
+    }
   }
 }
 
@@ -720,6 +973,7 @@ menu {
     }
 
     &.titling {
+      text-align: center;
       padding: 20%;
       display: flex;
       align-items: center;
@@ -1572,7 +1826,6 @@ menu {
     }
   }
 }
-
 // main page
 
 // cart start
@@ -1686,211 +1939,6 @@ menu {
       font-size: 26px;
       letter-spacing: 1.3px;
       line-height: 24px;
-    }
-  }
-
-  .one_cart_item {
-    display: flex;
-    padding: 30px;
-    align-items: stretch;
-
-    @media all and (max-width: 1400px) {
-      padding: 20px;
-    }
-
-    @media all and (max-width: 767px) {
-      padding: 30px 0;
-    }
-
-    .img_wrap {
-      width: 250px;
-      height: 160px;
-      flex: none;
-
-      @media all and (max-width: 767px) {
-        width: 110px;
-        height: 90px;
-      }
-    }
-
-    .product_inner {
-      flex: 1 1 auto;
-      padding: 0 40px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-
-      @media all and (max-width: 767px) {
-        padding: 0 15px;
-      }
-    }
-
-    .product_name {
-      color: #fff;
-      font-family: "Lapsus Pro";
-      font-size: 38px;
-      font-weight: 700;
-
-      @media all and (max-width: 767px) {
-        font-size: 20px;
-      }
-    }
-
-    .price_remove_wrap {
-      flex: none;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: flex-end;
-
-      .remove {
-        margin-top: 4px;
-        border-radius: 50%;
-        width: 33px;
-        height: 33px;
-        background-color: #fff;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        opacity: 0.4;
-        transition: opacity 180ms ease-in-out, border 180ms ease-in-out;
-        border: 1px solid #fff;
-
-        @media all and (max-width: 767px) {
-          width: 20px;
-          height: 20px;
-        }
-
-        svg {
-          width: 17px;
-          height: 19px;
-
-          @media all and (max-width: 767px) {
-            width: 12px;
-            height: 13px;
-          }
-
-          path {
-            fill: none;
-            stroke: #0e294a;
-            stroke-width: 1.5;
-            stroke-linecap: round;
-            stroke-linejoin: round;
-            stroke-miterlimit: 20;
-            transition: stroke 180ms ease-in-out;
-          }
-        }
-
-        &:hover {
-          @media all and (min-width: 767px) {
-            opacity: 1;
-            border: 1px solid #f26522;
-            transition: opacity 180ms ease-in-out, border 180ms ease-in-out;
-
-            svg {
-              path {
-                stroke: #f26522;
-                transition: stroke 180ms ease-in-out;
-              }
-            }
-          }
-        }
-      }
-
-      .price {
-        color: #f26522;
-        font-family: "Lapsus Pro";
-        font-size: 37px;
-        font-weight: 700;
-
-        @media all and (max-width: 767px) {
-          font-size: 32px;
-        }
-
-        &::after {
-          content: " ₴";
-        }
-      }
-    }
-
-    .quantity_wrap {
-      display: flex;
-      align-items: center;
-      grid-gap: 35px;
-      font-weight: 700;
-      font-family: "Lapsus Pro";
-
-      @media all and (max-width: 767px) {
-        grid-gap: 20px;
-      }
-
-      .quantity {
-        color: #f26522;
-        font-size: 31px;
-
-        @media all and (max-width: 767px) {
-          font-size: 20px;
-        }
-      }
-
-      button {
-        width: 50px;
-        height: 50px;
-        box-shadow: 0 3px 10px rgba(14, 41, 74, 0.2);
-        background-color: #fff;
-        border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: #f26522;
-        font-size: 46px;
-        opacity: 1;
-        transition: opacity 180ms ease-in-out;
-
-        @media all and (max-width: 767px) {
-          font-size: 20px;
-          width: 20px;
-          height: 20px;
-        }
-
-        &.disabled {
-          opacity: 0.3;
-          transition: opacity 180ms ease-in-out;
-          pointer-events: none;
-        }
-
-        &:hover {
-          @media all and (min-width: 767px) {
-            opacity: 0.7;
-            transition: opacity 180ms ease-in-out;
-          }
-        }
-
-        span {
-          display: block;
-          height: 50px;
-          cursor: pointer;
-
-          @media all and (max-width: 767px) {
-            height: 23px;
-          }
-        }
-
-        &.minus {
-          span {
-            height: 60px;
-
-            @media all and (max-width: 767px) {
-              height: 27px;
-            }
-          }
-        }
-      }
-    }
-
-    & + .one_cart_item {
-      border-top: 1px solid #f26522;
-      padding-top: 50px;
     }
   }
 
@@ -2275,13 +2323,16 @@ menu {
 // category end
 
 // feedback start
-
 .feed_back_wrap {
   .headings {
     margin-bottom: 60px;
+    align-items: flex-start;
 
     @media all and (max-width: 767px) {
       margin-bottom: 40px;
+    }
+
+    .default_btn {
     }
   }
 
@@ -2374,3 +2425,5 @@ menu {
   }
 }
 // feedback end
+
+
