--- a/css/styles.scss
+++ b/css/styles.scss
@@ -963,6 +963,9 @@ menu {
     min-height: 250px;
     display: block;
     overflow: hidden;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 
     @media all and (max-width: 1400px) {
       height: 200px;
@@ -1001,15 +1004,6 @@ menu {
         clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%, 100% 50%);
         background-color: #f26522;
       }
-    }
-
-    .img_wrap {
-      position: absolute;
-      z-index: 0;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
     }
 
     .title_wrap {
@@ -1230,10 +1224,6 @@ menu {
     }
   }
 
-  .product_link {
-    display: block;
-  }
-
   .img_wrap {
     height: calc(51.7vw - 34px);
     margin-bottom: 10px;
@@ -1271,9 +1261,6 @@ menu {
   }
 
   .add_top_cart {
-    position: absolute;
-    bottom: 0;
-    right: 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -2425,5 +2412,3 @@ menu {
   }
 }
 // feedback end
-
-
