--- a/css/styles.scss
+++ b/css/styles.scss
@@ -351,6 +351,10 @@ footer {
   span {
     z-index: 2;
   }
+
+  @media all and (max-width: 767px) {
+    font-size: 14px;
+  }
 }
 
 section {
@@ -454,6 +458,7 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 12;
 
   @media all and (max-width: 1400px) {
     top: 30px;
@@ -475,7 +480,16 @@ section {
     display: none;
   }
 
+  span {
+    opacity: 1;
+    transition: opacity 180ms;
+    pointer-events: all;
+  }
+
   &.active {
+    background-color: #fff;
+    transition: background-color 180ms;
+
     &:before,
     &:after {
       display: none !important;
@@ -484,15 +498,24 @@ section {
     svg {
       width: 17px;
       display: block;
-      fill: #fff;
+      fill: #0e294a;
       transition: fill 180ms ease-in-out;
     }
 
     &:hover {
+      border-color: #fff;
+      background-color: #0e294a;
+      transition: background-color 180ms;
       svg {
-        fill: #0e294a;
+        fill: #fff;
         transition: fill 180ms ease-in-out;
       }
+    }
+
+    span {
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 180ms;
     }
   }
 }
@@ -568,8 +591,7 @@ section {
     justify-content: center;
     color: #f26522;
     font-size: 46px;
-    opacity: 1;
-    transition: opacity 180ms ease-in-out;
+    transition: background-color 180ms ease-in-out;
 
     @media all and (max-width: 767px) {
       font-size: 20px;
@@ -585,8 +607,13 @@ section {
 
     &:hover {
       @media all and (min-width: 767px) {
-        opacity: 0.7;
-        transition: opacity 180ms ease-in-out;
+        background-color: #f26522;
+        transition: background-color 180ms ease-in-out;
+
+        span {
+          color: #fff;
+          transition: color 180ms;
+        }
       }
     }
 
@@ -594,6 +621,7 @@ section {
       display: block;
       height: 50px;
       cursor: pointer;
+      transition: color 180ms;
 
       @media all and (max-width: 767px) {
         height: 23px;
@@ -824,7 +852,7 @@ menu {
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 100;
+  z-index: 10;
   height: 100px;
   box-shadow: 3px 0 15px rgba(14, 41, 74, 0.2);
   background-image: linear-gradient(180deg, #0e294a 0%, #000 100%);
@@ -2061,7 +2089,7 @@ menu {
 
 // second_nav
 .second_nav {
-  z-index: 9;
+  z-index: 11;
   position: fixed;
   top: 0;
   bottom: 0;
