--- a/css/styles.scss
+++ b/css/styles.scss
@@ -641,6 +641,295 @@ section {
   }
 }
 
+.work_time {
+  width: 100%;
+  display: table;
+  table-layout: fixed;
+  color: #0e294a;
+
+  .head {
+    display: table-header-group;
+    font-size: 22px;
+    font-weight: 700;
+    font-family: "Lapsus Pro";
+
+    div {
+      display: table-cell;
+      padding-bottom: 10px;
+      border-bottom: 2px solid #f26522;
+
+      &:last-child {
+        width: 20%;
+      }
+
+      &:first-child {
+        padding-left: 10px;
+      }
+    }
+  }
+
+  .line {
+    display: table-row-group;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-weight: 500;
+
+    div {
+      display: table-cell;
+      padding-top: 20px;
+      padding-bottom: 20px;
+      border-bottom: 2px solid #f9b595;
+
+      &:first-child {
+        padding-left: 10px;
+      }
+    }
+  }
+}
+
+.mob_work_time {
+  div {
+    border-bottom: 2px solid #f9b595;
+    padding-bottom: 30px;
+
+    b {
+      margin-bottom: 15px;
+      color: #0e294a;
+      font-family: "Lapsus Pro";
+      font-size: 20px;
+      font-weight: 700;
+      display: block;
+    }
+
+    p {
+      color: #0e294a;
+      font-family: Montserrat;
+      font-size: 18px;
+      font-weight: 500;
+      line-height: 20px;
+
+      &:not(:last-child) {
+        margin-bottom: 30px;
+      }
+    }
+
+    & + div {
+      margin-top: 30px;
+    }
+  }
+}
+
+.for_personel_wrap {
+  justify-content: space-around;
+
+  @media all and (max-width: 767px) {
+    flex-wrap: wrap;
+    grid-gap: 70px;
+  }
+
+  .one_for_presonel {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    max-width: 220px;
+
+    @media all and (max-width: 767px) {
+      max-width: 100%;
+    }
+  }
+
+  .img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 122px;
+    height: 122px;
+    background-color: #fff;
+    border-radius: 50%;
+    margin-bottom: 25px;
+    border: 1px solid #0e294a;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  p {
+    text-align: center;
+    color: #f26522;
+    font-family: "Lapsus Pro";
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: uppercase;
+
+    @media all and (max-width: 767px) {
+      display: block;
+      max-width: 220px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+}
+
+.benefits_grid {
+  display: grid;
+  grid-gap: 20px;
+  justify-items: stretch;
+  align-items: stretch;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  grid-template-rows: repeat(auto-fill, minmax(320px, 1fr));
+
+  @media all and (max-width: 1400px) {
+    grid-template-rows: repeat(auto-fill, minmax(300px, 1fr));
+  }
+
+  @media all and (max-width: 1300px) {
+    grid-template-rows: repeat(auto-fill, minmax(250px, 1fr));
+  }
+
+  @media all and (max-width: 1200px) {
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  }
+
+  @media all and (max-width: 767px) {
+    display: block;
+  }
+
+  &.payment {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    grid-template-rows: repeat(auto-fill, minmax(320px, 1fr));
+
+    @media all and (max-width: 1400px) {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+      grid-template-rows: repeat(auto-fill, minmax(300px, 1fr));
+    }
+
+    @media all and (max-width: 1300px) {
+      grid-template-rows: repeat(auto-fill, minmax(250px, 1fr));
+    }
+
+    @media all and (max-width: 1200px) {
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    }
+  }
+
+  .one {
+    overflow: hidden;
+    background-color: #0e294a;
+    height: 100%;
+    width: 100%;
+    padding: 40px 20px;
+
+    @media all and (max-width: 767px) {
+      & + .one {
+        margin-top: 30px;
+      }
+    }
+
+    &::before {
+      content: "";
+      z-index: 1;
+      position: absolute;
+      top: 0;
+      right: 0;
+      clip-path: polygon(100% 0, 0 0, 100% 100%);
+      width: 75px;
+      height: 75px;
+      background-color: #f26522;
+    }
+
+    .info {
+      align-items: center;
+      margin-bottom: 30px;
+
+      .img {
+        border-radius: 50%;
+        width: 122px;
+        height: 122px;
+        background-color: #fff;
+        flex: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-right: 20px;
+
+        @media all and (max-width: 1100px) {
+          width: 100px;
+          height: 100px;
+        }
+      }
+
+      h3 {
+        color: #fff;
+        font-family: "Lapsus Pro";
+        font-size: 30px;
+        font-weight: 700;
+        text-transform: uppercase;
+
+        @media all and (max-width: 1100px) {
+          font-size: 26px;
+        }
+      }
+    }
+
+    .desc {
+      color: #fff;
+      font-family: Montserrat;
+      font-size: 14px;
+      font-weight: 400;
+    }
+  }
+}
+
+.terms {
+  color: #0e294a;
+  font-family: Montserrat;
+  font-size: 16px;
+  line-height: 25px;
+
+  @media all and (max-width: 767px) {
+    font-size: 14px;
+  }
+
+  h2 {
+    font-size: 16px;
+    font-weight: 600;
+
+    @media all and (max-width: 767px) {
+      font-size: 14px;
+    }
+
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
+  }
+
+  p {
+    font-weight: 400;
+
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+
+  ul,
+  ol {
+    list-style-position: inside;
+
+    ::marker {
+      font-weight: 700;
+    }
+
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+
+    li {
+      & + li {
+        margin-top: 15px;
+      }
+    }
+  }
+}
 // manu start
 nav {
   @media all and (min-width: 1000px) {
