--- a/css/about_us.css
+++ b/css/about_us.css
@@ -1,13 +1,18 @@
 @charset "UTF-8";
 .faddy_quotte {
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-bottom: 160px;
 }
 
 @media all and (max-width: 1000px) {
   .faddy_quotte {
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
 }
 
@@ -19,7 +24,9 @@
 
 .faddy_quotte .logo {
   width: 450px;
-  flex: none;
+  -webkit-box-flex: 0;
+      -ms-flex: none;
+          flex: none;
   margin-right: 20px;
 }
 
@@ -82,7 +89,9 @@
 
 @media all and (max-width: 1000px) {
   .faddy_quotte blockquote {
-    flex: 1 1 100%;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 100%;
+            flex: 1 1 100%;
     width: 100%;
     max-width: 100%;
   }
