--- a/css/order.css
+++ b/css/order.css
@@ -16,9 +16,13 @@
 }
 
 .custom_radio {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   cursor: pointer;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: #0e294a;
   font-family: Montserrat;
   font-size: 18px;
@@ -31,24 +35,29 @@
 
 .custom_radio span {
   margin-right: 10px;
-  flex: none;
+  -webkit-box-flex: 0;
+      -ms-flex: none;
+          flex: none;
   cursor: pointer;
   width: 15px;
   height: 15px;
   border-radius: 50%;
   border: 2px solid #0e294a;
   background-color: transparent;
+  -webkit-transition: background-color 180ms;
   transition: background-color 180ms;
 }
 
 .custom_radio:hover span,
 .custom_radio input:checked + span span {
   background-color: #f26522;
+  -webkit-transition: background-color 180ms;
   transition: background-color 180ms;
 }
 
 .custom_radio input:checked + span {
   background-color: #f26522;
+  -webkit-transition: background-color 180ms;
   transition: background-color 180ms;
 }
 
@@ -75,12 +84,28 @@
   max-width: 700px;
 }
 
+@media all and (max-width: 1400px) {
+  .scrollable_part {
+    max-width: 100%;
+    padding-right: 80px;
+  }
+}
+
+@media all and (max-width: 1100px) {
+  .scrollable_part {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
 .scrollable_part > * {
   width: 100%;
 }
 
 .scrollable_part .input_wrap {
-  flex: 1 1 auto;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
 }
 
 .my_bonus {
@@ -112,20 +137,48 @@
   position: fixed;
   right: 20px;
   top: 204px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: stretch;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+}
+
+@media all and (max-width: 1400px) {
+  .static_part {
+    position: relative;
+    width: auto;
+    right: auto;
+    top: auto;
+    margin: 60px 80px 0;
+    max-height: unset;
+  }
+}
+
+@media all and (max-width: 1100px) {
+  .static_part {
+    margin: 60px 0 0;
+  }
 }
 
 .static_bottom {
-  flex: none;
+  -webkit-box-flex: 0;
+      -ms-flex: none;
+          flex: none;
   margin-top: 40px;
   padding-left: 70px;
   padding-right: 30px;
 }
 
 .total_price {
-  justify-content: flex-end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   margin-bottom: 50px;
 }
 
@@ -151,7 +204,9 @@
 }
 
 .static_bottom_bottom {
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .static_bottom_bottom .default_btn {
@@ -160,7 +215,8 @@
 
 .orders_wrap {
   overflow: auto;
-  box-shadow: 3px 0 15px rgba(14, 41, 74, 0.2);
+  -webkit-box-shadow: 3px 0 15px rgba(14, 41, 74, 0.2);
+          box-shadow: 3px 0 15px rgba(14, 41, 74, 0.2);
   border-radius: 4px;
   background-color: #fff;
   padding: 0 30px;
