--- a/css/order.scss
+++ b/css/order.scss
@@ -6,6 +6,18 @@
     font-size: 35px;
     font-weight: 700;
     margin-bottom: 40px;
+
+    h2 {
+      @media all and (max-width: 1400px) {
+        order: 1;
+      }
+    }
+  }
+
+  @media all and (max-width: 1400px) {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
   }
 }
 
@@ -81,6 +93,8 @@
   @media all and (max-width: 1400px) {
     max-width: 100%;
     padding-right: 80px;
+    order: 3;
+    margin-top: 80px;
   }
 
   @media all and (max-width: 1100px) {
@@ -122,25 +136,38 @@
 
 .static_part {
   width: 770px;
-  max-height: calc(100vh - 250px);
-  position: fixed;
-  right: 20px;
-  top: 204px;
+  max-height: calc(100vh - 70px);
+  position: absolute;
+  right: 0;
+  top: 129px;
   display: flex;
   flex-direction: column;
   align-items: stretch;
+
+  &.fixed {
+    position: fixed;
+    top: 0;
+    right: 20px;
+
+    @media all and (max-width: 1400px) {
+      position: relative;
+      position: relative;
+      width: auto;
+      right: auto;
+      top: auto;
+      margin: 0;
+      order: 2;
+    }
+  }
 
   @media all and (max-width: 1400px) {
     position: relative;
     width: auto;
     right: auto;
     top: auto;
-    margin: 60px 80px 0;
+    margin: 0;
     max-height: unset;
-  }
-
-  @media all and (max-width: 1100px) {
-    margin: 60px 0 0;
+    margin-top: 0;
   }
 }
 
@@ -149,6 +176,11 @@
   margin-top: 40px;
   padding-left: 70px;
   padding-right: 30px;
+
+  @media all and (max-width: 1400px) {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 .total_price {
@@ -192,6 +224,11 @@
   background-color: #fff;
   padding: 0 30px;
 
+  @media all and (max-width: 1400px) {
+    box-shadow: none;
+    padding: 0;
+  }
+
   &::-webkit-scrollbar {
     width: 5px;
   }
@@ -212,6 +249,12 @@
 
   .one_cart_item + .one_cart_item {
     padding-top: 30px;
+  }
+
+  @media all and (max-width: 1400px) {
+    .price_remove_wrap .price {
+      margin-right: 5px;
+    }
   }
 }
 // order page end
